[package]
name = "web-crawler"
version = "0.1.0"
authors = ["tarquin-the-brave <tomsteavenson@gmail.com>"]
edition = "2021"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
encoding_rs_io = "0.1.7"
reqwest = { version = "0.11.4", features = ["blocking"] }
select = "0.5.0"
structopt = "0.3.23"
async-recursion = "0.3.2"
async-std = {version = "1.6", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
itertools = "0.10.1"
futures = "0.3.17"
